Revert "fix(view): show full gray line on mobile"
This reverts commit 35b6fa30

--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -39,7 +39,7 @@ img {
 .container {
   position: relative;
   padding: 0;
-  background-color: transparent;
+  background-color: white;
   overflow: hidden;
   user-select: none;
 }
